# Microlint

./: Cargo.toml  README.md
lint/accessing_init_from_non_init/: Cargo.toml  README.md
lint/accessing_init_from_non_init/src/: lib.rs
lint/accessing_init_from_non_init/ui/: main.rs  main.stderr
lint/calling_init_from_non_init/: Cargo.toml  README.md
lint/calling_init_from_non_init/src/: lib.rs
lint/calling_init_from_non_init/ui/: main.rs  main.stderr
src/: lib.rs
